# LicenseScanner

./: .gitignore  Makefile  README.md  install-ninka.sh  license-html-report  license-scanner  setup.cfg  setup.py
.github/workflows/: on-push.yml
Dependencies/: manual-licenses.json  prereqs-licenses.json
Tests/Projects/FakeXcodeDerivedData/swift-nio/Dependencies/: prereqs-licenses.json
Tests/Projects/KssDependencies/Dependencies/: prereqs.json
Tests/Projects/ManualDependencies/: DUMMY_LICENSE.txt
Tests/Projects/ManualDependencies/Dependencies/: manual-licenses.json
Tests/Projects/MultiProject/Dependencies/: manual-licenses.json
Tests/Projects/MultiProject/SubProject1/.prereqs/: Linux-x86_64
Tests/Projects/MultiProject/SubProject1/Dependencies/: manual-licenses.json  prereqs.json
Tests/Projects/MultiProject/SubProject2/Dependencies/: prereqs.json
Tests/Projects/MultiProject/SubProject3/: Package.resolved
Tests/Projects/NoDependencies/: some-file.txt
Tests/Projects/SwiftDependencies/: Package.resolved
Tests/features/: dependencies.feature  nodependancies.feature  package.feature
Tests/features/steps/: common.py  dependencies_steps.py  nodependancies.py  package_steps.py
Tests/unit/: test_package.py  test_spdx.py  test_util.py
Tests/unit/TestData/dir2/dir21/testdir/: somefile.txt
kss/license/: __init__.py  directory_scanner.py  entry_point.py  github.py  html_report.py  kss_prereqs_scanner.py  manual_scanner.py  scanner.py  spdx.py  swift_scanner.py  util.py
kss/license/resources/: _scripts.js  _styles.css  spdx-licenses.json
(+5 files in other folders)
