[metadata]
name = kss-pylicense
version = file: REVISION
author = Steven W. Klassen
author_email = klassens@acm.org
description = License Scanning Tool
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
url = https://github.com/klassen-software-solutions/LicenseScanner
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    kss-pyutil
